--- a/README
+++ b/README
@@ -16,6 +16,27 @@ Dependency
 This bundle depends on HolloMenuBundle, but you are free to hack the bundle to fit your needs.
 
 
+Getting started
+---------------
+
+Add the bundle to any of your existing projects, now all you have to do is:
+
+  - Add the bundle to AppKernel.php
+  - Add the bundle to autoload.php
+  - Add the route to config/route.yml
+
+Twig configuration
+~~~~~~~~~~~~~~~~~~
+Remember to add the following options to app/config/config.yml.
+
+twig:
+    form:
+      resources:
+        - 'HolloLayoutBundle::fields.html.twig'
+    globals:
+      logo: bundles/hollolayout/images/logo.gif
+
+
 TODO
 ----
 
